<resources>
    <string name="app_name">SoundRunner</string>
    <string name="action_settings">Settings</string>
    <string name="action_statistics">Statistics</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_weight">Weight</string>
    <string name="pref_height">Height</string>
    <string name="pref_sex">Genre</string>
    <string-array name="pref_sex_list">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="pref_sensitivity_list">
        <item>Very High</item>
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
        <item>Very Low</item>
    </string-array>
    <string-array name="pref_sensitivity_values_list">
        <item>1.97</item>
        <item>4.44</item>
        <item>12.00</item>
        <item>22.50</item>
        <item>50.62</item>
    </string-array>
</resources>