<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="Personal Data">
        <!-- NOTE: EditTextPreference accepts EditText attributes. -->
        <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
        <EditTextPreference
            android:capitalize="words"
            android:defaultValue="@string/pref_default_display_name"
            android:inputType="textCapWords"
            android:key="pref_name"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_display_name" />
        <ListPreference
            android:key="pref_sex"
            android:title="@string/pref_sex"
            android:dialogTitle="@string/pref_sex"
            android:entries="@array/pref_sex_list"
            android:entryValues="@array/pref_sex_list" />
        <EditTextPreference
            android:inputType="number"
            android:numeric="decimal"
            android:key="pref_weight"
            android:title="@string/pref_weight"/>
        <EditTextPreference
            android:inputType="number"
            android:numeric="integer"
            android:key="pref_height"
            android:title="@string/pref_height"/>
    </PreferenceCategory>

</PreferenceScreen>
